# my-resume

./: .gitignore  README.md  RESUME.md  create-pdf-resume.py  pyproject.toml  resume-long.html  resume.html
