 [project]
 name = "my-resume"
 version = "1.0.0"
 description = "HTML resume to PDF generator using WeasyPrint"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
   { name = "Vandivier", email = "vandivi3r@gmail.com" }
 ]
 dependencies = [
   "python-dotenv>=1.0.1",
   "jinja2>=3.1.4",
   "weasyprint>=62.0"
 ]

 [build-system]
 requires = ["hatchling>=1.25"]
 build-backend = "hatchling.build"
